# ct-iot-user-service-k8s

./: .dockerignore  .env.example  .env.test  .gitignore  .test.env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local-1.yml  docker-compose-local.yml  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  pytest-cov.ini  requirements.txt
.github/workflows/: action.yml  actions.yml  publish.yml  release.yml  steps.yml  tests.yml
alembic/: env.py
alembic/versions/: 199ee2453e33_add_users_admin_column.py  5e4d6b8dab17_user_confirmed.py  5f91ec0558e6_create_user_details_table.py  c4c2eafae6e5_create_users_table.py
app/: main.py  test_main.py
app/routers/: health.py  users.py
docs/: DIAGRAM.md  DIAGRAMS.md
docs/diagrams/: Signup_Activity_Diagram.puml  User_Activity_Diagram.puml
docs/diagrams/github_workflows/: Action_Activity_Diagram.puml  Release_Workflow_Activity_Diagram.puml  Tests_Workflow_Activity_Diagram.puml
docs/diagrams/routes/: Confirm_Account_Activity_Diagram.puml  Login_Activity_Diagram.puml  Signup_Activity_Diagram.puml  UserDetails_Activity_Diagram.puml  User_Activity_Diagram.puml
helm/user-service/: Chart.yaml  local-values.yaml  values.yaml
helm/user-service/secrets/: credentials.yaml
helm/user-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
resource/db/: tables.sql
resource/scripts/: check_version.py
scripts/: __main__.py  app_version.py  check_version.py  kafka-topics.sh
src/: abstract_crud_stmt.py  config.py  crud.py  crud_stmt.py  database.py  logger.py  main.py  models.py  schemas.py  users.py
src/database/: abstract_crud.py  abstract_crud_stmt.py  admin_crud.py  admin_crud_interface.py  admin_crud_stmt.py  admin_crud_stmt_interface.py  config.py  crud.py  crud_stmt.py  models.py  user_crud.py  user_crud_interface.py  user_crud_stmt.py  user_crud_stmt_interface.py  user_details_crud.py  user_details_crud_interface.py  user_details_crud_stmt.py  user_details_crud_stmt_interface.py
src/decorators/: exceptions.py  metrics.py
src/exceptions/: exceptions.py
src/kafka/: email_producer.py
src/routers/: account_confirmation.py  admin.py  auth.py  confirm_account.py  health.py  healthz.py  login.py  signup.py  user-details.py  user_details.py  users.py  verify_account.py
src/sqs/: email_producer.py
src/user_service/: __main__.py  service.py
src/utils/: app_util.py  auth_util.py  db_util.py  kafka_util.py  sqs_util.py  token_util.py  validator_util.py
tests/: config.py  conftest.py  database.py  test.env  test_main.py
tests/helper/: auth_helper.py  check_version_helper.py  db.py  email_helper.py  routes.py  routes_helper.py  token_helper.py  user_helper.py
tests/integration/database/: crud_exception_test.py  crud_test.py  exception_test.py
tests/integration/decorators/: users_route_test.py
tests/integration/kafka/: email_producer_test.py
tests/integration/middleware/: authorise_test.py
tests/integration/routers/: account_confirmation_route_test.py  admin_route_test.py  async_example_test.py  auth_route_test.py  confirm_account_route_test.py  email_confirmation_route_test.py  healthz_route_test.py  login_route_test.py  reset_password_route_test.py  routes_test.py  signup_route_test.py  user_details_route_test.py  users_route_test.py  verify_account_route_test.py
tests/integration/sqs/: email_consumer_test.py  email_producer_test.py
tests/unit/routers/: routes_test.py
tests/unit/scripts/: check_version_test.py
tests/unit/utils/: app_util_test.py  sqs_util_test.py  token_util.py  util_exception_test.py  validator_util_test.py
